Change Log
==============

2022/09/21 (IBM_DB adapter 5.3.1, driver 3.0.6)
  - Yanked version 5.3.0 as package includes clidriver

2022/09/17 (IBM_DB adapter 5.3.0, driver 3.0.6)
  - Support for Ruby 3.0 and Rails 6.1

2018/05/24 (IBM_DB adapter 4.0.0, driver 3.0.5)
  - Rails 5.0.7 Toleration support. New features of Active Record 5.0.7 are not added also none of the open issue are fixed in this release.
  
2016/07/08 (IBM_DB adapter 3.0.5, driver 3.0.5)
  - Fixed issue #71 - Query hangs from db2 with no any exception return
  
2016/07/08 (IBM_DB adapter 3.0.4, driver 3.0.3)
  - Fixed issue #58 - non-string query parameters do not get prepared.
  
2016/06/17 (IBM_DB adapter 3.0.3, driver 3.0.3)
  - Fixed issue #59 - Can't Update Binary Files Using 3.0.x (with Ruby 2.1.0 and Rails 4.2.6) 
  
2016/05/24 (IBM_DB adapter 3.0.2, driver 3.0.2)
  - Fixed issue #52 - Invalid foreign key ON UPDATE action specified in schema.rb 
  - Fixed issue #59 - Can't Upload Binary Files Using 3.0.x (with Ruby 2.1.0 and Rails 4.2.6) 
  
2016/01/06 (IBM_DB adapter 3.0.1, driver 3.0.1)
  - Combined MacOS and Linux installation code in one file under extconf.rb to handle any Mac OS version upgrade.
  - Fixed bug#49 - Regardless of what value you pass in for a clob, update_attributes will set the value to <ibm>@@@IBMTEXT@@@</ibm> in the database
  
2015/09/30 (IBM_DB adapter 3.0.0, driver 3.0.0)
  - Added minimum dependency for Rails version 4.2.0 and for active record 4.2.0, as some Rails 4.2 APIs are not backward compatible.
  - Fixed Foreign key issues
  - Changed code to remove use of serialized_attributes as it is deprecated.
  
2015/07/14 (IBM_DB adapter 2.6.1, driver 2.6.1)
  - Foreign key support
  
2015/06/29 (IBM_DB adapter 2.6.0, driver 2.6.0)
  - Enhanced installation for Windows to pull IBM Data Server Driver automatically on first use  if not present
  - Enhanced installation for Mac OS to pull IBM Data Server Driver automatically if not present