@@ -3705,13 +3705,15 @@ module Arel
   class IBM_DB < Arel::Visitors::ToSql
     private
       def visit_Arel_Nodes_Limit(o, collector)
-        collector << "LIMIT "
+        collector << " FETCH FIRST "
         visit o.expr, collector
+        collector << " ROWS ONLY "
       end
 
       def visit_Arel_Nodes_Offset(o, collector)
-        collector << "OFFSET "
+        collector << " OFFSET "
         visit o.expr, collector
+        collector << " ROWS"
       end
 
       def visit_Arel_Nodes_ValuesList(o, collector)
@@ -3753,7 +3755,10 @@ module Arel
           }
         end
 
-        if (o.offset && o.limit.nil?)
+        if (o.offset && o.limit)
+          visit_Arel_Nodes_Offset(o.offset, collector)
+          visit_Arel_Nodes_Limit(o.limit, collector)
+        elsif (o.offset && o.limit.nil?)
           collector << " OFFSET "
           visit o.offset.expr, collector
           collector << " ROWS "
