@@ -1,6 +1,9 @@
 Change Log
 ==============
 
+2022/10/06 (IBM_DB adapter 5.3.2, driver 3.0.6)
+  - Allowed all rails versions < 6.2 in gemspec, replaced limit clause with FETCH FIRST n ROWS
+
 2022/09/21 (IBM_DB adapter 5.3.1, driver 3.0.6)
   - Yanked version 5.3.0 as package includes clidriver
 
